# urdb-utils

./: LICENSE  README.md  WORKFLOW_MIGRATION.md  pyproject.toml  requirements.txt  setup_dev.py
.github/: copilot_instructions.md
data/: NG Prices by State and Year.csv  county_utilities_map.csv  us_county_geo_information.csv
examples/: enhanced_workflow.py  geographic_workflow.py  sample_usage.py
src/urdb_county_rates/: __init__.py  aggregate.py  cli.py  crosswalk.py  enhanced_pricing.py  export.py  geo_mapping.py  pricing.py  tariffs.py  urdb_client.py
tests/: test_basic.py
